[package]
name = "fuel-pbft"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-pbft"
description = "A pBFT scheme for Fuel."

[dependencies]

[dev-dependencies]
fuel-pbft-mock = { path = "tests/mock" }
