[package]
name = "fuel-bft-mock"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
publish = false
repository = "https://github.com/FuelLabs/fuel-bft"

[dependencies]
fuel-bft = { path = "../fuel-bft" }
fuel-crypto = { version = "0.4", features = [ "random" ] }
fuel-types = "0.3"
itertools = "0.10"
rand = "0.8"
