[package]
name = "fuel-bft"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-bft"
description = "A Rust implementation of the Tendermint consensus protocol."

[dependencies]
fuel-crypto = { version = "0.4", default-features = false }
fuel-types = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[features]
default = [ "fuel-crypto/default", "fuel-types/default", "std" ]
std = [ "fuel-crypto/std", "fuel-types/std" ]
trace = [ "tracing" ]
