[package]
name = "fuel-pbft-mock"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
repository = "https://github.com/FuelLabs/fuel-pbft"

[dependencies]
curve25519-dalek = "3.2"
fuel-pbft = { path = "../../" }
hex = "0.4"
sha2 = "0.9"
