[package]
name = "fuel-bft-mock"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
repository = "https://github.com/FuelLabs/fuel-bft"

[dependencies]
elliptic-curve = "0.11"
k256 = { version = "0.10", features = [ "arithmetic", "ecdsa" ] }
fuel-bft = { path = "../../" }
hex = "0.4"
itertools = "0.10"
rand = "0.8"
sha2 = "0.10"
